Set up classes and populate with initial data

--- a/index.html
+++ b/index.html
@@ -14,24 +14,45 @@
         </div>
     </header>
     <section>
-        <div>
-            Professional Summary
+        <div class="main">
+            <div>
+                <h2>Professional Summary</h2>
+                <p>Summary here</p>
+            </div>
+            <div class="employmentHistory">
+                <h2>Employment History</h2>
+                    <div class="employmentCard">
+                        <p>Date</p>
+                        <h3>Role Title</h3>
+                        <ul>
+                            <li>Responsibility One</li>
+                            <li>Responsibility Two</li>
+                            <li>Responsibility Three</li>
+                        </ul>
+                    </div>
+            </div>
+            <div class="educationalHistory">
+                <h2>Educational History</h2>
+                    <div>
+                        <p>Date</p>
+                        <h3>Name of Certification</h3>
+                        <h4>Name of School</h4>
+                        <p>blurb</p>
+                    </div>
+                
+            </div>
         </div>
-        <div>
-            Employment History
-        </div>
-        <div>
-            Education
-        </div>
+        <aside>
+            <div class="skills">
+                <h2>Skills</h2>
+                <p>skills?</p> 
+            </div>
+            <div class="aboutMe">
+                <h2>About Me</h2>
+                <p>about</p>
+            </div>
+        </aside>
     </section>
-    <aside>
-        <div>
-            Skills 
-        </div>
-        <div>
-            About Me and Hobbies
-        </div>
-    </aside>
     <footer>
         Footer
     </footer>
